--- a/sass/themes/schemas/components/dark/_grid-toolbar.scss
+++ b/sass/themes/schemas/components/dark/_grid-toolbar.scss
@@ -29,10 +29,18 @@ $dark-material-grid-toolbar: extend(
 
 /// Generates a dark fluent grid-toolbar schema.
 /// @type {Map}
+/// @prop {Map} title-text-color [color: ('gray', 600)] - The toolbar title text color.
 /// @requires $fluent-grid-toolbar
 $dark-fluent-grid-toolbar: extend(
     $fluent-grid-toolbar,
     (
+        title-text-color: (
+            color: (
+                'gray',
+                600,
+            ),
+        ),
+
         _meta: (
             theme: 'fluent',
             variant: 'dark',
